src/snapshots/glass__parser__tests__clone_expr.snap
---
source: src/parser.rs
expression: "parse_expr_str(\"clone(model)\")"
---
Spanned {
    node: Clone(
        Spanned {
            node: Var(
                "model",
            ),
            span: Span {
                start: 6,
                end: 11,
            },
        },
    ),
    span: Span {
        start: 0,
        end: 12,
    },
}
