src/snapshots/glass__parser__tests__field_access.snap
---
source: src/parser.rs
expression: "parse_expr_str(\"model.wave\")"
---
Spanned {
    node: FieldAccess {
        object: Spanned {
            node: Var(
                "model",
            ),
            span: Span {
                start: 0,
                end: 5,
            },
        },
        field: "wave",
    },
    span: Span {
        start: 0,
        end: 10,
    },
}
