src/snapshots/glass__parser__tests__full_program.snap
---
source: src/parser.rs
expression: parse(source)
---
Module {
    definitions: [
        Type(
            TypeDef {
                is_pub: true,
                name: "Msg",
                type_params: [],
                constructors: [
                    Constructor {
                        name: "Tick",
                        fields: [],
                        span: Span {
                            start: 20,
                            end: 24,
                        },
                    },
                    Constructor {
                        name: "UnitDied",
                        fields: [
                            Field {
                                name: "killer",
                                type_expr: Named {
                                    name: "Player",
                                    args: [],
                                },
                                span: Span {
                                    start: 40,
                                    end: 54,
                                },
                            },
                            Field {
                                name: "bounty",
                                type_expr: Named {
                                    name: "Int",
                                    args: [],
                                },
                                span: Span {
                                    start: 56,
                                    end: 67,
                                },
                            },
                        ],
                        span: Span {
                            start: 29,
                            end: 69,
                        },
                    },
                ],
                is_struct: false,
                span: Span {
                    start: 5,
                    end: 71,
                },
            },
        ),
        Function(
            FnDef {
                is_pub: true,
                is_local: false,
                name: "update",
                params: [
                    Param {
                        name: "model",
                        type_expr: Named {
                            name: "Model",
                            args: [],
                        },
                        span: Span {
                            start: 87,
                            end: 99,
                        },
                    },
                    Param {
                        name: "msg",
                        type_expr: Named {
                            name: "Msg",
                            args: [],
                        },
                        span: Span {
                            start: 101,
                            end: 109,
                        },
                    },
                ],
                return_type: Some(
                    Tuple(
                        [
                            Named {
                                name: "Model",
                                args: [],
                            },
                            Named {
                                name: "List",
                                args: [
                                    Named {
                                        name: "Effect",
                                        args: [
                                            Named {
                                                name: "Msg",
                                                args: [],
                                            },
                                        ],
                                    },
                                ],
                            },
                        ],
                    ),
                ),
                body: Spanned {
                    node: Case {
                        subject: Spanned {
                            node: Var(
                                "msg",
                            ),
                            span: Span {
                                start: 152,
                                end: 155,
                            },
                        },
                        arms: [
                            CaseArm {
                                pattern: Spanned {
                                    node: Constructor {
                                        name: "Msg::Tick",
                                        args: [],
                                    },
                                    span: Span {
                                        start: 166,
                                        end: 169,
                                    },
                                },
                                guard: None,
                                body: Spanned {
                                    node: Tuple(
                                        [
                                            Spanned {
                                                node: Var(
                                                    "model",
                                                ),
                                                span: Span {
                                                    start: 180,
                                                    end: 185,
                                                },
                                            },
                                            Spanned {
                                                node: List(
                                                    [],
                                                ),
                                                span: Span {
                                                    start: 187,
                                                    end: 189,
                                                },
                                            },
                                        ],
                                    ),
                                    span: Span {
                                        start: 179,
                                        end: 190,
                                    },
                                },
                                span: Span {
                                    start: 166,
                                    end: 190,
                                },
                            },
                            CaseArm {
                                pattern: Spanned {
                                    node: Constructor {
                                        name: "Msg::UnitDied",
                                        args: [
                                            Spanned {
                                                node: Var(
                                                    "killer",
                                                ),
                                                span: Span {
                                                    start: 213,
                                                    end: 219,
                                                },
                                            },
                                            Spanned {
                                                node: Var(
                                                    "bounty",
                                                ),
                                                span: Span {
                                                    start: 221,
                                                    end: 227,
                                                },
                                            },
                                        ],
                                    },
                                    span: Span {
                                        start: 199,
                                        end: 228,
                                    },
                                },
                                guard: None,
                                body: Spanned {
                                    node: Tuple(
                                        [
                                            Spanned {
                                                node: Var(
                                                    "model",
                                                ),
                                                span: Span {
                                                    start: 233,
                                                    end: 238,
                                                },
                                            },
                                            Spanned {
                                                node: List(
                                                    [],
                                                ),
                                                span: Span {
                                                    start: 240,
                                                    end: 242,
                                                },
                                            },
                                        ],
                                    ),
                                    span: Span {
                                        start: 232,
                                        end: 243,
                                    },
                                },
                                span: Span {
                                    start: 199,
                                    end: 243,
                                },
                            },
                        ],
                    },
                    span: Span {
                        start: 141,
                        end: 251,
                    },
                },
                span: Span {
                    start: 77,
                    end: 251,
                },
            },
        ),
    ],
}
