src/snapshots/glass__parser__tests__import_simple.snap
---
source: src/parser.rs
expression: "parse(\"import jass/unit\")"
---
Module {
    definitions: [
        Import(
            ImportDef {
                path: [
                    "jass",
                    "unit",
                ],
                items: None,
                alias: None,
                span: Span {
                    start: 0,
                    end: 16,
                },
            },
        ),
    ],
}
