src/snapshots/glass__parser__tests__import_with_alias.snap
---
source: src/parser.rs
expression: "parse(\"import jass/effect as fx\")"
---
Module {
    definitions: [
        Import(
            ImportDef {
                path: [
                    "jass",
                    "effect",
                ],
                items: None,
                alias: Some(
                    "fx",
                ),
                span: Span {
                    start: 0,
                    end: 24,
                },
            },
        ),
    ],
}
