src/snapshots/glass__parser__tests__list_cons_pattern.snap
---
source: src/parser.rs
expression: "parse_expr_str(\"case xs { [h | t] -> h _ -> 0 }\")"
---
Spanned {
    node: Case {
        subject: Spanned {
            node: Var(
                "xs",
            ),
            span: Span {
                start: 5,
                end: 7,
            },
        },
        arms: [
            CaseArm {
                pattern: Spanned {
                    node: ListCons {
                        head: Spanned {
                            node: Var(
                                "h",
                            ),
                            span: Span {
                                start: 11,
                                end: 12,
                            },
                        },
                        tail: Spanned {
                            node: Var(
                                "t",
                            ),
                            span: Span {
                                start: 15,
                                end: 16,
                            },
                        },
                    },
                    span: Span {
                        start: 10,
                        end: 17,
                    },
                },
                guard: None,
                body: Spanned {
                    node: Var(
                        "h",
                    ),
                    span: Span {
                        start: 21,
                        end: 22,
                    },
                },
                span: Span {
                    start: 10,
                    end: 22,
                },
            },
            CaseArm {
                pattern: Spanned {
                    node: Discard,
                    span: Span {
                        start: 23,
                        end: 24,
                    },
                },
                guard: None,
                body: Spanned {
                    node: Int(
                        0,
                    ),
                    span: Span {
                        start: 28,
                        end: 29,
                    },
                },
                span: Span {
                    start: 23,
                    end: 29,
                },
            },
        ],
    },
    span: Span {
        start: 0,
        end: 31,
    },
}
